[package]
name = "libbluetooth"
version = "0.2.0"
authors = ["Wodann <wodannson@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Raw FFI bindings for Unix' libbluetooth."
repository = "https://github.com/Wodann/libbluetooth-rs/"
keywords = ["unix", "ffi", "bluetooth"]
categories = ["external-ffi-bindings", "network-programming", "os::unix-apis"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs","README.md", "LICENSE-APACHE", "LICENSE-MIT"]
edition = "2018"

build = "build.rs"
links = "bluetooth"

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.52.0"
pkg-config = "0.3.17"
